--- a/client/style.css
+++ b/client/style.css
@@ -117,8 +117,8 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #300a21;
-
+  background: #8f8b8d;
+  
   display: flex;
   flex-direction: row;
   gap: 10px;
@@ -127,7 +127,7 @@ form {
 textarea {
   width: 100%;
 
-  color: rgb(217, 240, 9);
+  color: rgb(0, 0, 0);
   font-size: 18px;
 
   padding: 10px;
